# NPTool_IDATEN

./: .gitignore  README.md
Dockerfile/: gitlabci-nptool-ubuntu19.04
Examples/Example1/: Analysis.cxx  Analysis.h  ShowResults.C  sim.sh
Examples/Example4/: Analysis.cxx  sim.sh
Examples/Example5/: CheckSimu.C  Example5.mac  sim.sh
Inputs/: .gitignore
Inputs/CrossSection/: sofia.txt
Inputs/DetectorConfiguration/: IDATEN.detector  IDATEN_Tig.detector  IDATEN_Tig2.detector  IDATEN_Tig3.detector  Tigress.detector
Inputs/EventGenerator/: 152Eu.source  gamma.source
NPLib/: .gitignore  CMakeLists.txt
NPLib/Calibration/: CMakeLists.txt
NPLib/Core/: .gitignore  CMakeLists.txt  NPCalibrationManager.cxx  NPCalibrationManager.h  NPDetectorFactory.cxx  NPDetectorFactory.h  NPDetectorManager.cxx  NPDetectorManager.h  NPInputParser.cxx  NPInputParser.h  NPOptionManager.cxx  NPOptionManager.h  NPSpectraServer.cxx  (+7 more)
NPLib/Detectors/BigRIPS/: CMakeLists.txt  TBigRIPSFocal.cxx  TBigRIPSFocal.h  TBigRIPSICData.cxx  TBigRIPSICData.h  TBigRIPSICPhysics.cxx  TBigRIPSICPhysics.h  TBigRIPSPPACData.cxx  TBigRIPSPPACData.h  TBigRIPSPPACPhysics.cxx  TBigRIPSPPACPhysics.h  TBigRIPSPlasticData.cxx  TBigRIPSPlasticData.h  TBigRIPSPlasticPhysics.cxx  TBigRIPSPlasticPhysics.h  TBigRIPSReco.cxx  TBigRIPSReco.h
NPLib/Detectors/Catana/: CMakeLists.txt  TCatanaData.cxx  TCatanaData.h  TCatanaPhysics.cxx  TCatanaPhysics.h  TCatanaSpectra.cxx  TCatanaSpectra.h
NPLib/Detectors/Charissa/: CMakeLists.txt
NPLib/Detectors/ChiNu/: CMakeLists.txt  TChiNuData.cxx  TChiNuData.h  TChiNuPhysics.cxx  TChiNuPhysics.h  TChiNuSpectra.cxx  TChiNuSpectra.h
NPLib/Detectors/Eurogam/: CMakeLists.txt
NPLib/Detectors/FissionChamber/: CMakeLists.txt  TFissionChamberData.cxx  TFissionChamberData.h  TFissionChamberPhysics.cxx  TFissionChamberPhysics.h  TFissionChamberSpectra.cxx  TFissionChamberSpectra.h
NPLib/Detectors/GAGG/: CMakeLists.txt  TGAGGData.cxx  TGAGGData.h  TGAGGPhysics.cxx  TGAGGPhysics.h  TGAGGSpectra.cxx  TGAGGSpectra.h
NPLib/Detectors/Khala/: CMakeLists.txt  TKhalaData.cxx  TKhalaData.h  TKhalaPhysics.cxx  TKhalaPhysics.h
NPLib/Detectors/Minos/: CMakeLists.txt  MTreeStructureLinkDef.h  MinosUtility.cxx  MinosUtility.h  TMinosClust.cxx  TMinosClust.h  TMinosData.cxx  TMinosData.h  TMinosPhysics.cxx  TMinosPhysics.h  TMinosResult.cxx  TMinosResult.h  oldTMinosData.cxx  oldTMinosData.h  oldTMinosPhysics.cxx  oldTMinosPhysics.h
NPLib/Detectors/ModularLeaf/: CMakeLists.txt
NPLib/Detectors/Nebula/: CMakeLists.txt  TNebulaData.cxx  TNebulaData.h  TNebulaPhysics.cxx  TNebulaPhysics.h  TNebulaSpectra.cxx  TNebulaSpectra.h
NPLib/Detectors/PISTA/: CMakeLists.txt  TPISTAData.cxx  TPISTAData.h  TPISTAPhysics.cxx  TPISTAPhysics.h  TPISTASpectra.cxx  TPISTASpectra.h
NPLib/Detectors/Pyramid/: CMakeLists.txt
NPLib/Detectors/Samurai/: CMakeLists.txt  SamuraiDCIndex.h  SamuraiFieldMap.cxx  SamuraiFieldMap.h  TSamuraiBDCData.cxx  TSamuraiBDCData.h  TSamuraiBDCPhysics.cxx  TSamuraiBDCPhysics.h  TSamuraiFDC0Data.cxx  TSamuraiFDC0Data.h  TSamuraiFDC0Physics.cxx  TSamuraiFDC0Physics.h  TSamuraiFDC2Data.cxx  TSamuraiFDC2Data.h  TSamuraiFDC2Physics.cxx  TSamuraiFDC2Physics.h  TSamuraiHodoscopeData.cxx  TSamuraiHodoscopeData.h  TSamuraiHodoscopePhysics.cxx  TSamuraiHodoscopePhysics.h
NPLib/Detectors/Scone/: CMakeLists.txt  TSconeData.cxx  TSconeData.h  TSconePhysics.cxx  TSconePhysics.h  TSconeSpectra.cxx  TSconeSpectra.h
NPLib/Detectors/Sofia/: CMakeLists.txt  TSofAtData.cxx  TSofAtData.h  TSofAtPhysics.cxx  TSofAtPhysics.h  TSofBeamID.cxx  TSofBeamID.h  TSofFissionFragment.cxx  TSofFissionFragment.h  TSofMwpcData.cxx  TSofMwpcData.h  TSofMwpcPhysics.cxx  TSofMwpcPhysics.h  TSofSciData.cxx  TSofSciData.h  TSofSciPhysics.cxx  TSofSciPhysics.h  TSofTofWData.cxx  TSofTofWData.h  TSofTofWPhysics.cxx  TSofTofWPhysics.h  TSofTrimData.cxx  TSofTrimData.h  TSofTrimPhysics.cxx  TSofTrimPhysics.h  TSofTwimData.cxx  TSofTwimData.h  TSofTwimPhysics.cxx  TSofTwimPhysics.h
NPLib/Detectors/Strasse/: CMakeLists.txt  TStrasseData.cxx  TStrasseData.h  TStrassePhysics.cxx  TStrassePhysics.h  TStrasseSpectra.cxx  TStrasseSpectra.h
NPLib/Detectors/Sweeper/: CMakeLists.txt  TSweeperData.cxx  TSweeperData.h  TSweeperPhysics.cxx  TSweeperPhysics.h  TSweeperSpectra.cxx  TSweeperSpectra.h
NPLib/Detectors/TACTIC/: CMakeLists.txt  TTACTICData.cxx  TTACTICData.h  TTACTICPhysics.cxx  TTACTICPhysics.h  TTACTICSpectra.cxx  TTACTICSpectra.h
NPLib/Detectors/beam_dump/: CMakeLists.txt
NPLib/Detectors/eAGanil/: CMakeLists.txt  TeAGanilData.cxx  TeAGanilData.h  TeAGanilPhysics.cxx  TeAGanilPhysics.h  TeAGanilSpectra.cxx  TeAGanilSpectra.h
NPLib/Neutron/: CMakeLists.txt  NPCrossTalk.cxx  NPCrossTalk.h
NPLib/Physics/: CMakeLists.txt  GEF.cxx  GEF.h  NPBeam.cxx  NPBeam.h  NPDecay.cxx  NPDecay.h  NPEnergyLoss.cxx  NPFissionDecay.cxx  NPFissionDecay.h  NPFunction.cxx  NPFunction.h  NPNucleus.h  NPParticle.cxx  NPParticle.h  NPParticleLinkDef.h  NPQFS.cxx  NPQFS.h  NPReaction.cxx  NPReaction.h  TFissionConditions.cxx  TFissionConditions.h  TInteractionCoordinates.cxx  TInteractionCoordinates.h  TReactionConditions.cxx  TReactionConditions.h  TTrackInfo.cxx  TTrackInfo.h  nubtab16.asc
NPLib/TrackReconstruction/: CMakeLists.txt  DCTest.cxx  NPCluster.cxx  NPDCReconstruction.cxx  NPDCReconstruction.h  NPDCReconstructionMT.cxx  NPDCReconstructionMT.h  NPLinearRansac3D.cxx  NPLinearRansac3D.h  NPRansac.cxx  NPTrackReconstructionLinkDef.h  NPTrackingUtility.cxx  NPTrackingUtility.h  Tracking.cxx  Tracking.h
NPSimulation/: .gitignore  CMakeLists.txt  Simulation.cc
NPSimulation/Detectors/TACTIC/: CMakeLists.txt  GARFDRIFT.h  README  TACTIC.cc  TACTIC.hh  TACTICScorer.cc  TACTICScorer.hh  ar_90_ch4_10.gas  he_90_co2_10_500mbar.gas
NPSimulation/Process/: BeamReaction.cc  BeamReaction.hh  CMakeLists.txt  Decay.cc  FissionDecay.cc  FissionDecay.hh  G4DETransport.cc  G4IonizationWithDE.cc  NPIonIonInelasticPhysic.cc  NeutronHPphysics.cc  PhysicsList.cc  PhysicsList.hh
asdf/: SimTree.C  SimTree.h  generator.c  hist.c  submit.sh
(+215 files in other folders)
